# WinDurango

./: README.md
.github/workflows/: build.yml  release.yml
projects/WinDurango.Implementation.WinRT/: CMakeLists.txt
projects/WinDurango.KernelX/: CMakeLists.txt
projects/WinDurango.KernelX/src/: CurrentApp.cpp
projects/WinDurango.WinRT/: CMakeLists.txt
